--- a/iDrink/pom.xml
+++ b/iDrink/pom.xml
@@ -12,7 +12,7 @@
       <groupId>org.kie</groupId>
       <artifactId>kie-api</artifactId>
       <version>6.5.0.Final</version>
-      <scope>compile</scope>
+      <scope>compile</scope> test
     </dependency>
     <dependency>
       <groupId>org.muni.fi</groupId>
